# ibkr-mcp-server

./: .env.example  .envrc  .gitignore  INTEGRATION_SUMMARY.md  README.md  env.example  flake.nix  main.py  pyproject.toml  run.sh
app/: main.py
app/api/endpoints/: gateway.py  portfolio.py
app/api/endpoints/ibkr/: __init__.py  contracts.py  market_data.py  positions.py  scanner.py  scanners.py
app/api/ibkr/: __init__.py  account.py  connection.py  contracts.py  ib_constants.py  market_data.py  positions.py  scanners.py  trading.py
app/core/: config.py  setup_logging.py
app/gateway/: __init__.py  docker_service.py  gateway_manager.py
app/models/: __init__.py  account.py  connection.py  market_data.py  portfolio.py  scanner.py  ticker.py  trading.py
app/services/: __init__.py  account.py  client.py  connection.py  contracts.py  ibkr_service.py  interfaces.py  market_data.py  positions.py  run_test.py  scanners.py  trading.py
app/util/: __init__.py  convert_to_snake_case.py
